--- a/Brink Theme/modHideHentaiCovers.css
+++ b/Brink Theme/modHideHentaiCovers.css
@@ -1,5 +1,5 @@
 /*------------------------------*\
-|*  Hide Hentai Covers  v1.0.1  *|
+|*  Hide Hentai Covers  v1.0.2  *|
 \* - - - - - - - - - - - - - - -*/
 
 .data.tags {
@@ -19,7 +19,7 @@
 	transition:
 		color var(--timeText) var(--bezierFast),
 		opacity calc(var(--timeItem) * 1.5) var(--bezierFast);
-} .list-item:hover,
+} .list-item:hover .data.tags a,
 .list-item:focus-within .data.tags a {
 	opacity: 1;
 }
