Update version number & message

--- a/Kure Theme/Kure.css
+++ b/Kure Theme/Kure.css
@@ -1,16 +1,16 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*\
 | Kure (name subject to change)  |
 | by Valerio Lyndon              |
-| Version 0.4.2                  |
+| Version 0.5.0                  |
 |                                |
 |   This theme is incomplete.    |
 | Functionality is limited and   |
 | the design is not completed.   |
 | I would appreciate you fixing  |
 | issues yourself where possible.|
-| If I had the desire to edit    |
-| this theme, I would do it on   |
-| my own time. Thank you.        |       
+| If I have the desire to edit   |
+| this theme, I will do it on    |
+| my own time. Thank you.        |
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 /* IMPORTS */
