--- a/Kure Theme/Kure.css
+++ b/Kure Theme/Kure.css
@@ -828,7 +828,7 @@ body::before {
 } .list-table-data {
 	display: flex !important;
 	min-height: 40px;
-	padding: 0 80px 0 5px;
+	padding: 5px 80px 5px 5px;
 }
 
 .list-table .list-table-data .data {
@@ -902,9 +902,9 @@ body:not([data-query*='status":7']) .list-table .list-table-data .data.status {
 .list-table .list-table-data .data.image {
 	width: 40px;
 	height: 40px;
-	margin: 5px 0 5px 10px;
+	margin: 0 0 0 10px;
 	border-radius: 20px;
-	order: 5;
+	order: 7;
 	overflow: hidden;
 }
 
@@ -919,9 +919,11 @@ body:not([data-query*='status":7']) .list-table .list-table-data .data.status {
 /* Title */
 
 .list-table .list-table-data .data.title {
+	width: 100%;
+	min-width: 100px;
 	padding: 0;
-	flex: 1 1 auto;
-	order: 15;
+	flex: 0 1 auto;
+	order: 10;
 }
 
 .list-table .list-table-data .data.title .link {
@@ -996,7 +998,7 @@ body:not([data-query*='status":7']) .list-table .list-table-data .data.status {
 	width: 2ch;
 	/* Using a fixed height prevents jitter when bringing up selection box */
 	height: 3ch;
-	order: 10;
+	order: 3;
 }
 
 .list-table .list-table-data .data.score .link {
@@ -1031,7 +1033,9 @@ body:not([data-query*='status":7']) .list-table .list-table-data .data.status {
 .list-table .list-table-data .data.progress,
 .list-table .list-table-data .data.chapter,
 .list-table .list-table-data .data.volume {
-	order: 20;
+	width: 40px;
+	order: 15;
+	flex: 1 0 auto;
 	text-align: right;
 	font-size: 1.1rem;
 }
@@ -1051,38 +1055,63 @@ body:not([data-query*='status":7']) .list-table .list-table-data .data.status {
 }
 
 .list-table .list-table-data .data.type {
-	width: 70px;
-	order: 22;
+	width: 60px;
+	order: 20;
 }
+
+/* Dates */
 
 .list-table .list-table-data .data.started,
 .list-table .list-table-data .data.finished,
 .list-table .list-table-data .data.airing-started,
 .list-table .list-table-data .data.airing-finished {
 	width: 60px;
-	order: 17;
+	order: 45;
+} .list-table .list-table-data .data.started,
+.list-table .list-table-data .data.airing-started {
+	margin-bottom: 20px;
+} .list-table .list-table-data .data.finished,
+.list-table .list-table-data .data.airing-finished {
+	margin: 20px 0 0 -60px;
 }
+
+/* Days */
 
 .list-table .list-table-data .data.days {
 	width: 30px;
+	order: 47;
 }
+
+/* Season */
 
 .list-table .list-table-data .data.season {
 	width: 90px;
+	order: 50;
 }
 
 .list-table .list-table-data .data.studio,
 .list-table .list-table-data .data.licensor,
-.list-table .list-table-data .data.magazine {
+.list-table .list-table-data .data.magazine,
+.list-table .list-table-data .data.genre,
+.list-table .list-table-data .data.demographic {
 	width: 100px;
+	order: 60;
 }
 
 .list-table .list-table-data .data.tags {
 	width: 100px;
+	order: 65;
 }
 
 .list-table .list-table-data .data.storage {
 	width: 70px;
+	order: 70;
+}
+
+.list-table .list-table-data .data.priority,
+.list-table .list-table-data .data.rated {
+	width: 70px;
+	order: 70;
 }
 
 /* More Content */
