--- a/Kure Theme/Kure.css
+++ b/Kure Theme/Kure.css
@@ -958,7 +958,8 @@ body:not([data-query*='status":7']) .list-table .list-table-data .data.status {
 	font-size: 0;
 }
 
-.list-table .list-table-data .data.title .add-edit-more a {
+.list-table .list-table-data .data.title .add-edit-more a,
+.list-table .list-table-data .tags .edit {
 	display: block;
 	width: 26px;
 	height: 26px;
@@ -968,13 +969,24 @@ body:not([data-query*='status":7']) .list-table .list-table-data .data.status {
 	text-align: center;
 	opacity: 0.5;
 	transition: opacity var(--transition-button);
-} .list-table .list-table-data .data.title .add-edit-more a:hover {
+} .list-table .list-table-data .tags .edit {
+	position: absolute;
+	top: calc(50% - 13px);
+	right: -7px;
+	font-size: 0;
+	color: hsl(var(--link)) !important;
+} .list-table .list-table-data .data.title .add-edit-more a:hover,
+.list-table .list-table-data .tags .edit:hover {
 	opacity: 1;
+	/* for .edit */
+	color: hsl(var(--link-h)) !important;
 }
 
-.add-edit-more a::after {
+.add-edit-more a::after,
+.data.tags .edit::after {
 	font-size: 1.2rem;
 	line-height: 26px;
+	font-family: var(--fontset);
 	transition: color var(--transition-button);
 } .add-edit-more .add a::after {
 	content: '\f067';
@@ -983,6 +995,19 @@ body:not([data-query*='status":7']) .list-table .list-table-data .data.status {
 	line-height: 24px;
 } .add-edit-more .more a::after {
 	content: '\f141';
+} .data.tags .edit::after {
+	content: '\f02b';
+}
+
+/* Tags */
+
+.list-table .list-table-data .data.tags {
+	position: relative;
+	width: 100px;
+	order: 90;
+} [data-owner='1'] .list-table .list-table-data .data.tags {
+	width: 129px;
+	padding-right: 29px;
 }
 
 /* Number */
@@ -1102,11 +1127,6 @@ body:not([data-query*='status":7']) .list-table .list-table-data .data.status {
 .list-table .list-table-data .data.demographic {
 	width: 100px;
 	order: 60;
-}
-
-.list-table .list-table-data .data.tags {
-	width: 100px;
-	order: 65;
 }
 
 .list-table .list-table-data .data.storage {
